// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenario-action-patterns-form Renders \`scenario-action-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  entity-attributes="[object Object]"
  form="[object Object]"
  name="customName"
  some-required="some-required"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
/>
`;

exports[`scenario-action-patterns-form Renders \`scenario-action-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  entity-attributes="[object Object]"
  name="patterns"
  some-required="some-required"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
/>
`;
